--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
                 <div class="overlay"  onclick="persistentStyles()"><div class="textContent">Contact Me</div></div></a>
             </div>
             <div class="container">
-                <a class="menuIcon" href="./projects.html">
+                <a class="menuIcon" href="./Resources/AlexBowenResume.pdf" target="_blank">
                 <img id="resume" src="./Resources/resumeBlack.gif">
                 <div class="overlay"  onclick="persistentStyles()"><div class="textContent">Resume</div></div></a>
             </div>
