moddified the menu and font

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     <div id="backgroundImage">
         <div id="pageContent">
-            <h1>Check me out I think I'm Mr. Cool</h1>
+            <h1>Alex Bowen</h1>
             <div id="termynal" data-termynal data-termynal data-ty-typeDelay="40" data-ty-lineDelay="700" data-ty-progressChar="&#x2588;" data-ty-cursor="&#x258C;" >
                 <span data-ty="input">sudo apt-get install node</span>
                 <span data-ty="progress"></span>
