added the skills page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <span data-ty="input">node helloWorld.js</span>
                 <span data-ty>Hello World!</span>
                 <span data-ty="input">node alexBowen.js</span>
-                <span data-ty>Hello! My name is Alex Bowen a full stack developer with a passion for technology!</span>
+                <span data-ty>Hello! My name is Alex Bowen a full stack developer, with a passion for technology!</span>
             </div>
         </div>
     </div>
