--- a/skills.html
+++ b/skills.html
@@ -49,8 +49,160 @@
     </div>
     <div id="backgroundImage">
         <div id="pageContent">
-            Skills go here.
+            <h1>Skills</h1>
+            <ul>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/html.png">
+                  <div class="overlay2"><div class="textContent">HTML</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/javaScript.png">
+                  <div class="overlay2"><div class="textContent">JavaScript</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/css.png">
+                  <div class="overlay2"><div class="textContent">CSS</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/ruby.png">
+                  <div class="overlay2"><div class="textContent">Ruby</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/java.png">
+                  <div class="overlay2"><div class="textContent">Java</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/python.png">
+                  <div class="overlay2"><div class="textContent">Python</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/c.png">
+                  <div class="overlay2"><div class="textContent">C</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/angularjs.png">
+                  <div class="overlay2"><div class="textContent">AngularJS</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/reactjs.png">
+                  <div class="overlay2"><div class="textContent">ReactJS</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/django.svg">
+                  <div class="overlay2"><div class="textContent">Django</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/phonegap.png">
+                  <div class="overlay2"><div class="textContent">Phonegap</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/wordpress.png">
+                  <div class="overlay2"><div class="textContent">Wordpress</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/nodejs.png">
+                  <div class="overlay2"><div class="textContent">NodeJS</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/rubyOnRails.png">
+                  <div class="overlay2"><div class="textContent">Ruby On Rails</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/springboot.png">
+                  <div class="overlay2"><div class="textContent">SpringBoot</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/artifactory.png">
+                  <div class="overlay2"><div class="textContent">Artifactory</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/chef.png">
+                  <div class="overlay2"><div class="textContent">Chef</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/circleCi.png">
+                  <div class="overlay2"><div class="textContent">Circle Ci</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/drone.png">
+                  <div class="overlay2"><div class="textContent">Drone</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/github.png">
+                  <div class="overlay2"><div class="textContent">GitHub</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/OpenStack.png">
+                  <div class="overlay2"><div class="textContent">OpenStack</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/waffle.png">
+                  <div class="overlay2"><div class="textContent">Waffle.io</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/sql.png">
+                  <div class="overlay2"><div class="textContent">SQL</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/svn.png">
+                  <div class="overlay2"><div class="textContent">SVN</div></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="container">
+                  <img src="./Resources/photoshop.jpg">
+                  <div class="overlay2"><div class="textContent">Photoshop</div></div>
+                </div>
+              </div>
 
+            </ul>
         </div>
     </div>
 </body>
