added the experience tab and some css changes

--- a/experience.html
+++ b/experience.html
@@ -12,7 +12,7 @@
         <ul>
             <div id="logo">
                 <a href=./index.html>
-                <img id="logoPicture" src="./Resources/logoBlueTop.gif">
+                <img id="logoPicture" src="./Resources/logoRedTop.gif">
                 <div id="logoName">Alex</div>
             </div>
             <div class="container">
@@ -49,8 +49,50 @@
     </div>
     <div id="backgroundImage">
         <div id="pageContent">
-            Old Jobs go here.
-
+            <h1>Previous Experience</h1>
+            <div class="jobContent">
+              <img src="./Resources/targetLogo.png">
+              <h2>Target | Minneaplois, MN</h2>
+              <p id="jobDescription">API & CI/CD Development</p>
+              <p>Developed Target’s gift card balance inquiry
+                RESTful API using SpringBoot. Set up their CI/CD
+                pipeline using Drone, Chef, Artifactory, and
+                Openstack</p>
+            </div>
+            <div class="jobContent">
+              <img src="./Resources/YPC.png">
+              <h2>YPC Media | Rochester, NY</h2>
+              <p id="jobDescription">Android & IOS Developer</p>
+              <p>Full stack Android and iOS App Developer. Built
+                an app using Apache’s Phonegap framework which
+                uses HTML, Javascript, and CSS to port webapps to
+                both Android and iOS apps</p>
+            </div>
+            <div class="jobContent">
+              <img id="sito" src="./Resources/SITO.png">
+              <h2>Student IT Office | Rochester, NY</h2>
+              <p id="jobDescription">Web Development & Testing</p>
+              <p>Developed tests and enhancing existing features
+                for Tiger Center, an improved version of Oracle’s
+                Student Information System utilized by RIT
+                Students</p>
+            </div>
+            <div class="jobContent">
+              <img src="./Resources/CAIR.jpg">
+              <h2>Center for Accessibility & <br>Inclusion Research | Rochester, NY</h2>
+              <p id="jobDescription">Web Development & Research</p>
+              <p>Google’s Blockly is a library for building visual
+                programs. Researched how to make it usable for
+                blind users, developed the navigation system, tests,
+                and worked with the Aria Screen Reader.</p>
+            </div>
+            <div class="jobContent">
+              <img src="./Resources/innovative.jpeg">
+              <h2>Innovative Inc. | Hagerstown, MD</h2>
+              <p id="jobDescription">Managed Services</p>
+              <p>Performed system backups and instalations for clients. Also
+              ran phone support when clients had issues</p>
+            </div>
         </div>
     </div>
 </body>
