--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <div id="logo">
                 <a href=./index.html>
-                <img id="logoPicture" src="./Resources/logoBlueTop.gif">
+                <img id="logoPicture" src="./Resources/logoRedTop.gif">
                 <div id="logoName">Alex</div>
             </div>
             <div class="container">
