added the contact form and fixed some CSS

--- a/contact.html
+++ b/contact.html
@@ -49,9 +49,13 @@
     </div>
     <div id="backgroundImage">
         <div id="pageContent">
-            Contact information goes here.
-
+          <div class="fixedContainer">
+          <h1>Contact Me!</h1>
+          <h2>Phone: 240-469-7313</h2>
+          <h2>Email: mab2098@g.rit.edu</h2>
+          <h2>Github: alexbow</h2>
         </div>
+      </div>
     </div>
 </body>
 </html>
