--- a/experience.html
+++ b/experience.html
@@ -50,6 +50,7 @@
     <div id="backgroundImage">
         <div id="pageContent">
             <h1>Previous Experience</h1>
+            <div class="fixedContainer">
             <div class="jobContent">
               <img src="./Resources/targetLogo.png">
               <h2>Target | Minneaplois, MN</h2>
@@ -60,7 +61,7 @@
                 Openstack</p>
             </div>
             <div class="jobContent">
-              <img src="./Resources/YPC.png">
+              <img id="YPC" src="./Resources/YPC.png">
               <h2>YPC Media | Rochester, NY</h2>
               <p id="jobDescription">Android & IOS Developer</p>
               <p>Full stack Android and iOS App Developer. Built
@@ -93,6 +94,7 @@
               <p>Performed system backups and instalations for clients. Also
               ran phone support when clients had issues</p>
             </div>
+          </div>
         </div>
     </div>
 </body>
