--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <div id="backgroundImage">
         <div id="pageContent">
             <h1>Alex Bowen</h1>
+            <div id="terminalBox">
             <div id="termynal" data-termynal data-termynal data-ty-typeDelay="40" data-ty-lineDelay="700" data-ty-progressChar="&#x2588;" data-ty-cursor="&#x258C;" >
                 <span data-ty="input">sudo apt-get install node</span>
                 <span data-ty="progress"></span>
@@ -64,6 +65,7 @@
                 <span data-ty="input">node alexBowen.js</span>
                 <span data-ty>Hello! My name is Alex Bowen a full stack developer, with a passion for technology!</span>
             </div>
+          </div>
         </div>
     </div>
     <script src="./Javascript/termynal.js" data-termynal-container="#termynal"></script>
