--- a/skills.html
+++ b/skills.html
@@ -51,6 +51,7 @@
         <div id="pageContent">
             <h1>Skills</h1>
             <ul>
+              <div class="fixedContainer">
               <div class="skills">
                 <div class="container">
                   <img src="./Resources/html.png">
@@ -71,14 +72,14 @@
               </div>
               <div class="skills">
                 <div class="container">
-                  <img src="./Resources/ruby.png">
-                  <div class="overlay2"><div class="textContent2">Ruby</div></div>
+                  <img src="./Resources/java.png">
+                  <div class="overlay2"><div class="textContent2">Java</div></div>
                 </div>
               </div>
               <div class="skills">
                 <div class="container">
-                  <img src="./Resources/java.png">
-                  <div class="overlay2"><div class="textContent2">Java</div></div>
+                  <img src="./Resources/ruby.png">
+                  <div class="overlay2"><div class="textContent2">Ruby</div></div>
                 </div>
               </div>
               <div class="skills">
@@ -201,7 +202,7 @@
                   <div class="overlay2"><div class="textContent2">Photoshop</div></div>
                 </div>
               </div>
-
+            </div>
             </ul>
         </div>
     </div>
