--- a/experience.html
+++ b/experience.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="icon" href="./Resources/logoBlueTop.gif">
+<link rel="icon" href="./Resources/logoBlack.gif">
 <link id="myStyleSheet" href="./CSS/stylesheet1.css" rel="stylesheet" type="text/css" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
@@ -12,37 +12,37 @@
         <ul>
             <div id="logo">
                 <a href=./index.html>
-                <img id="logoPicture" src="./Resources/logoRedTop.gif">
-                <div id="logoName">Alex</div>
+                <img class="logoImage">
+                <div id="logoName">Alex Bowen</div>
             </div>
             <div class="container">
                 <a class="menuIcon" href="./projects.html">
-                <img id="portfolio" src="./Resources/portfolioBlack.gif">
+                <img id="portfolio">
                 <div class="overlay"  onclick="persistentStyles()"><div class="textContent">Projects</div></div></a>
             </div>
             <div class="container">
                 <a class="menuIcon" href="./skills.html">
-                <img id="skills" src="./Resources/computerBlack.gif">
+                <img id="skills">
                 <div class="overlay"  onclick="persistentStyles()"><div class="textContent">Skills</div></div></a>
             </div>
             <div class="container">
                 <a class="menuIcon" href="./experience.html">
-                <img id="experience" src="./Resources/experienceBlack.gif">
+                <img id="experience">
                 <div class="overlay"  onclick="persistentStyles()"><div class="textContent">Experience</div></div></a>
             </div>
             <div class="container">
                 <a class="menuIcon" href="./contact.html">
-                <img id="contact" src="./Resources/mailBlack.gif">
+                <img id="contact">
                 <div class="overlay"  onclick="persistentStyles()"><div class="textContent">Contact Me</div></div></a>
             </div>
             <div class="container">
                 <a class="menuIcon" href="./Resources/AlexBowenResume.pdf" target="_blank">
-                <img id="resume" src="./Resources/resumeBlack.gif">
+                <img id="resume">
                 <div class="overlay"  onclick="persistentStyles()"><div class="textContent">Resume</div></div></a>
             </div>
             <div class="container">
                 <button class="menuIcon" type="button" class="btn">
-                <img id="lightbulb" src="./Resources/lightbulbBlack.png"></button>
+                <img id="lightbulb"></button>
                 <div class="overlay" onclick="switchStyleSheet()"><div class="textContent">Invert Colors</div></div>
             </div>
         </ul>
